Added transformation to livedata

--- a/app/src/main/res/layout/conceptcard_fragment.xml
+++ b/app/src/main/res/layout/conceptcard_fragment.xml
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
-        android:text="@{viewModel.getConceptCardLiveData().}" />
+        android:text="@{viewModel.getConceptCardLiveData()}" />
     </ScrollView>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
