--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
   <color name="oppiaSecondaryText">#666666</color>
   <!-- BASIC COLORS -->
   <color name="white">#FFFFFF</color>
+  <color name="black">#000000</color>
   <!-- AUDIO COMPONENT -->
   <color name="audioComponentBackground">@color/oppiaDarkBlue</color>
   <!-- SUBMIT BUTTON INACTIVE -->
