Updated question to use state adapter

--- a/app/src/main/res/layout/question_player_fragment.xml
+++ b/app/src/main/res/layout/question_player_fragment.xml
@@ -15,43 +15,22 @@
     android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/question_recycler_view"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:divider="@android:color/transparent"
+      android:dividerHeight="8dp"
+      android:padding="16dp"
+      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       app:layout_constraintTop_toTopOf="parent"
-      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-    <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/feedback_recycler_view"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      app:layout_constraintTop_toTopOf="@id/question_recycler_view"
-      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-    <LinearLayout
-      android:id="@+id/interaction_container"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      app:layout_constraintTop_toBottomOf="@id/feedback_recycler_view"
-      android:orientation="vertical">
-      <Button
-        android:id="@+id/submit_button"
-        app:layout_constraintTop_toBottomOf="@id/feedback_recycler_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-      <Button
-        android:id="@+id/continue_button"
-        app:layout_constraintTop_toBottomOf="@id/feedback_recycler_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    </LinearLayout>
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintBottom_toTopOf="@id/question_progress_bar"/>
     <LinearLayout
       android:id="@+id/end_screen_container"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintTop_toTopOf="@id/feedback_recycler_view">
+      app:layout_constraintTop_toTopOf="parent">
       <Button
         android:id="@+id/replay_button"
         android:layout_width="wrap_content"
@@ -63,7 +42,7 @@
     </LinearLayout>
     <ProgressBar
       android:id="@+id/question_progress_bar"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
