--- a/app/src/main/res/layout/topic_play_fragment.xml
+++ b/app/src/main/res/layout/topic_play_fragment.xml
@@ -2,15 +2,28 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <androidx.constraintlayout.widget.ConstraintLayout
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/oppiaBackground">
+
+    <TextView
+      android:id="@+id/topic_play_text_view"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="32dp"
+      android:layout_marginTop="32dp"
+      android:layout_marginEnd="32dp"
+      android:fontFamily="sans-serif-medium"
+      android:text="@string/stories_you_can_play"
+      android:textColor="@color/oppiaPrimaryText"
+      android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/story_summary_recycler_view"
       android:layout_width="match_parent"
-      android:layout_height="0dp"
+      android:layout_height="match_parent"
       android:clipToPadding="false"
       android:overScrollMode="never"
       android:paddingBottom="@dimen/bottom_white_space"
@@ -20,5 +33,5 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  </LinearLayout>
 </layout>
