--- a/app/src/main/res/layout/profile_chooser_profile_view.xml
+++ b/app/src/main/res/layout/profile_chooser_profile_view.xml
@@ -4,7 +4,9 @@
   xmlns:profile="http://schemas.android.com/tools">
 
   <data>
+
     <import type="android.view.View" />
+
     <variable
       name="viewModel"
       type="org.oppia.app.model.ProfileChooserUiModel" />
@@ -25,7 +27,7 @@
       android:layout_marginBottom="8dp"
       app:civ_border_color="@color/avatarBorder"
       app:civ_border_width="1dp"
-      profile:src="@{viewModel.profile.avatar}" />
+      profile:src="@{viewModel.profile.avatarImageUri}" />
 
     <TextView
       android:id="@+id/profile_name_text"
